--- a/MysteriousEncyclopedia/Views/Home/HomeMysteriousEventsByTopic.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeMysteriousEventsByTopic.cshtml
@@ -73,7 +73,7 @@
                                             <a class="text-primary text-uppercase text-decoration-none" href="/Home/HomeMysteriousEventsByTopic?topic=@topic">@topic</a>
                                         }
                                     </div> *@
-                                    <a class="h5 m-0 text-decoration-none" href="/Home/HomeMysteriousEventDetail/@item.EventID">@item.EventTitle</a>
+                                    <a class="h5 m-0 text-decoration-none" href="/eventdetails/@item.EventID">@item.EventTitle</a>
                                 </div>
                             </div>
                         </div>
