--- a/MysteriousEncyclopedia/Views/Home/HomeNavbarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeNavbarPartialView.cshtml
@@ -21,7 +21,7 @@
                             <a href="/logout" class="dropdown-item">Logout</a>
                         </div>
                     </div>
-                    <a href="/Home/HomeResources/" class="nav-item nav-link">Resources</a>
+                    <a href="/resources" class="nav-item nav-link">Resources</a>
                 </div>
             </div>
         </nav>
