--- a/MysteriousEncyclopedia/Views/Shared/Components/MysteriousEventsInHomePage/Default.cshtml
+++ b/MysteriousEncyclopedia/Views/Shared/Components/MysteriousEventsInHomePage/Default.cshtml
@@ -28,7 +28,7 @@
                                     <span class="text-primary px-2">|</span>
                                 }
                             </div> *@
-                            <a class="h5 m-0 text-decoration-none" href="/Home/HomeMysteriousEventDetail/@item.EventID">@item.EventTitle</a>
+                            <a class="h5 m-0 text-decoration-none" href="/eventdetails/@item.EventID">@item.EventTitle</a>
                         </div>
                     </div>
                 </div>
