--- a/MysteriousEncyclopedia/Views/Home/HomeFooterPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeFooterPartialView.cshtml
@@ -10,9 +10,9 @@
         <div class="col-lg-3 col-md-6 mb-5">
             <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contents</h5>
             <div class="d-flex flex-column justify-content-start">
-                <a class="text-white-50 mb-2" href="/Home/HomeMysteriousEventList"><i class="fa fa-angle-right mr-2"></i>Events</a>
-                <a class="text-white-50 mb-2" href="/Home/HomeResources"><i class="fa fa-angle-right mr-2"></i>Resources</a>
-                <a class="text-white-50 mb-2" href="/Home/HomeContact"><i class="fa fa-angle-right mr-2"></i>Contact</a>
+                <a class="text-white-50 mb-2" href="/mysteriousevents"><i class="fa fa-angle-right mr-2"></i>Events</a>
+                <a class="text-white-50 mb-2" href="/resources"><i class="fa fa-angle-right mr-2"></i>Resources</a>
+                <a class="text-white-50 mb-2" href="/contactus"><i class="fa fa-angle-right mr-2"></i>Contact</a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
