--- a/MysteriousEncyclopedia/Views/Shared/Components/TopicsInHomePage/Default.cshtml
+++ b/MysteriousEncyclopedia/Views/Shared/Components/TopicsInHomePage/Default.cshtml
@@ -12,7 +12,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="destination-item position-relative overflow-hidden mb-2">
                         <img class="img-fluid" src="@item.TopicImage" alt="">
-                        <a class="destination-overlay text-white text-decoration-none" href="/Home/HomeMysteriousEventsByTopic?topic=@item.TopicName">
+                        <a class="destination-overlay text-white text-decoration-none" href="/events?topic=@item.TopicName">
                             <h5 class="text-white">@item.TopicName</h5>
 @*                             <span>100 Cities</span> *@
                         </a>
