email code changed, number of comments function's query is updated (commentstatus==1)

--- a/MysteriousEncyclopedia/Views/Home/HomeHeaderPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeHeaderPartialView.cshtml
@@ -4,8 +4,9 @@
         Mysterious Encyclopedia - @ViewData["Title"]
     </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta name="keywords" content="Free Encyclopedia, mysterious events, 20th century">
+    <meta name="description" content="Explore our free encyclopedia about mysterious events of the 20th century.">
+    <meta name="author" content="Emre Karatas">
 
     <!-- Favicon -->
     <link href="~/HomeTheme/img/favicon.ico" rel="icon">
