url hiding completed, home mysterious event search by name completed, urls in views changed based on hiding, remaining resources are entered after zodiac killer

--- a/MysteriousEncyclopedia/Views/Contact/CommentDetail.cshtml
+++ b/MysteriousEncyclopedia/Views/Contact/CommentDetail.cshtml
@@ -20,7 +20,7 @@
                     <div class="form-group">
                         <textarea asp-for="CommentText" rows="10" class="form-control my-4"></textarea>
                     </div>
-                    <a href="/Contact/ListComments/" class="btn btn-dark btn-rounded">Back</a>
+                    <a href="/comments" class="btn btn-dark btn-rounded">Back</a>
                 </form>
             </div>
         </div>
