--- a/MysteriousEncyclopedia/Views/Contact/RequestDetail.cshtml
+++ b/MysteriousEncyclopedia/Views/Contact/RequestDetail.cshtml
@@ -23,7 +23,7 @@
                     <div class="form-group">
                         <textarea asp-for="RequestDescription" rows="10" class="form-control my-4"></textarea>
                     </div>
-                    <a href="/Contact/RequestList/" class="btn btn-dark btn-rounded">Back</a>
+                    <a href="/requests" class="btn btn-dark btn-rounded">Back</a>
                 </form>
             </div>
         </div>
