--- a/MysteriousEncyclopedia/Views/Home/HomePage.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomePage.cshtml
@@ -14,7 +14,7 @@
                     <div class="p-3" style="max-width: 900px;">
                         <h4 class="text-white text-uppercase mb-md-3">Mysteries</h4>
                         <h4 class="font-weight-lighter text-white mb-md-4">Dive into the enigmatic realms of our encyclopedic wonderland, where mysteries unfold with each click</h4>
-                        <a href="/Home/HomeMysteriousEventList/" class="btn btn-primary py-md-3 px-md-5 mt-2">Start Reading</a>
+                        <a href="/mysteriousevents" class="btn btn-primary py-md-3 px-md-5 mt-2">Start Reading</a>
                     </div>
                 </div>
             </div>
@@ -24,7 +24,7 @@
                     <div class="p-3" style="max-width: 900px;">
                         <h4 class="text-white text-uppercase mb-md-3">Unknowns</h4>
                         <h4 class="font-weight-lighter text-white mb-md-4">Discover the secrets of the unknown in history, science, and the inexplicable on our captivating platform</h4>
-                        <a href="/Home/HomeMysteriousEventList/" class="btn btn-primary py-md-3 px-md-5 mt-2">Start Reading</a>
+                        <a href="/mysteriousevents" class="btn btn-primary py-md-3 px-md-5 mt-2">Start Reading</a>
                     </div>
                 </div>
             </div>
