--- a/MysteriousEncyclopedia/Views/MysteriousEvent/AddResourceToEvent.cshtml
+++ b/MysteriousEncyclopedia/Views/MysteriousEvent/AddResourceToEvent.cshtml
@@ -21,7 +21,7 @@
                         <span class="text-danger" asp-validation-for="@Model.ReferenceID"></span>
                     </div>
                     <button type="submit" class="btn btn-primary btn-rounded me-2 mt-2">Add</button>
-                    <a href="/MysteriousEvent/ResourcesByEventID/@Model.EventID" class="btn btn-dark btn-rounded mt-2">Cancel</a>
+                    <a href="/eventsources/@Model.EventID" class="btn btn-dark btn-rounded mt-2">Cancel</a>
                 </form>
             </div>
         </div>
