--- a/MysteriousEncyclopedia/Views/MysteriousEvent/MysteriousEventAdd.cshtml
+++ b/MysteriousEncyclopedia/Views/MysteriousEvent/MysteriousEventAdd.cshtml
@@ -53,7 +53,7 @@
                         </label>
                     </div>
                     <button type="submit" class="btn btn-primary btn-rounded me-2">Add</button>
-                    <a href="/MysteriousEvent/MysteriousEventList/" class="btn btn-dark btn-rounded">Cancel</a>
+                    <a href="/showmysteriousevents" class="btn btn-dark btn-rounded">Cancel</a>
                 </form>
             </div>
         </div>
