--- a/MysteriousEncyclopedia/Views/MysteriousEvent/MysteriousEventList.cshtml
+++ b/MysteriousEncyclopedia/Views/MysteriousEvent/MysteriousEventList.cshtml
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                         <p>@item.EventModifiedDate.ToString("dd-MM-yyyy hh:mm")</p>
-                        <a href="/MysteriousEvent/MysteriousEventUpdate/@item.EventID" class="btn btn-info btn-rounded btn-sm"><i class="mdi mdi-tooltip-edit"></i>&nbsp; Edit</a>
+                        <a href="/editevent/@item.EventID" class="btn btn-info btn-rounded btn-sm"><i class="mdi mdi-tooltip-edit"></i>&nbsp; Edit</a>
                     </div>
 
                 </div>
