--- a/MysteriousEncyclopedia/Views/Reference/AddReference.cshtml
+++ b/MysteriousEncyclopedia/Views/Reference/AddReference.cshtml
@@ -24,7 +24,7 @@
                         <span class="text-danger" asp-validation-for="@Model.ReferenceDescription"></span>
                     </div>
                     <button type="submit" class="btn btn-primary btn-rounded me-2">Add</button>
-                    <a href="/Reference/ReferencesList/" class="btn btn-dark btn-rounded">Cancel</a>
+                    <a href="/references" class="btn btn-dark btn-rounded">Cancel</a>
                 </form>
             </div>
         </div>
