--- a/MysteriousEncyclopedia/Views/Topic/TopicAdd.cshtml
+++ b/MysteriousEncyclopedia/Views/Topic/TopicAdd.cshtml
@@ -20,7 +20,7 @@
                         <span class="text-danger" asp-validation-for="@Model.TopicImage"></span>
                     </div>
                     <button type="submit" class="btn btn-primary btn-rounded me-2">Add</button>
-                    <a href="/Topic/TopicList/" class="btn btn-dark btn-rounded">Cancel</a>
+                    <a href="/eventtopics" class="btn btn-dark btn-rounded">Cancel</a>
                 </form>
             </div>
         </div>
