--- a/MysteriousEncyclopedia/Views/Topic/TopicUpdate.cshtml
+++ b/MysteriousEncyclopedia/Views/Topic/TopicUpdate.cshtml
@@ -21,7 +21,7 @@
                         <span class="text-danger" asp-validation-for="@Model.TopicImage"></span>
                     </div>
                     <button type="submit" class="btn btn-info btn-rounded me-2">Edit</button>
-                    <a href="/Topic/TopicList/" class="btn btn-dark btn-rounded">Cancel</a>
+                    <a href="/eventtopics/" class="btn btn-dark btn-rounded">Cancel</a>
                 </form>
             </div>
         </div>
