--- a/MysteriousEncyclopedia/Views/AdminLayouts/AdminTopNavbarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/AdminLayouts/AdminTopNavbarPartialView.cshtml
@@ -5,8 +5,8 @@
             <span class="mdi mdi-menu"></span>
         </button>
         <div class="navbar-brand-wrapper">
-            <a class="navbar-brand brand-logo" href="/Home/HomePage"><img src="~/AdminTheme/template/images/School.png" alt="logo" /></a>
-            <a class="navbar-brand brand-logo-mini" href="/Home/HomePage"><img src="~/AdminTheme/template/images/School.png" alt="logo" /></a>
+            <a class="navbar-brand brand-logo" href="/home"><img src="~/AdminTheme/template/images/School.png" alt="logo" /></a>
+            <a class="navbar-brand brand-logo-mini" href="/home"><img src="~/AdminTheme/template/images/School.png" alt="logo" /></a>
         </div>
         <ul class="navbar-nav navbar-nav-right">
             <li class="nav-item">
