--- a/MysteriousEncyclopedia/Views/Contact/ListContacts.cshtml
+++ b/MysteriousEncyclopedia/Views/Contact/ListContacts.cshtml
@@ -39,7 +39,7 @@
                                     <td>@item.ContactEmail</td>
                                     <td>@item.ContactDate.ToShortDateString()</td>
                                     <td>@item.ContactText</td>
-                                    <td><a href="/Contact/DeleteContact/@item.ContactID" class="btn btn-outline-danger btn-rounded btn-fw">Delete</a></td>
+                                    <td><a href="/removecont/@item.ContactID" class="btn btn-outline-danger btn-rounded btn-fw">Delete</a></td>
                                 </tr>
                             }
                         </tbody>
