--- a/MysteriousEncyclopedia/Views/Home/HomeFooterPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeFooterPartialView.cshtml
@@ -34,7 +34,7 @@
     <div class="row">
         <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
             <p class="m-0 text-white-50">
-                Copyright &copy; <a href="#">MysteriousEncyclopedia</a>. All Rights Reserved.
+                Copyright &copy; <a href="/home">MysteriousEncyclopedia</a>. All Rights Reserved.
             </p>
         </div>
         <div class="col-lg-6 text-center text-md-right">
