--- a/MysteriousEncyclopedia/Views/Home/HomeMysteriousEventList.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeMysteriousEventList.cshtml
@@ -13,7 +13,7 @@
         <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
             <h3 class="display-4 text-white text-uppercase">Events</h3>
             <div class="d-inline-flex text-white">
-                <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
+                <p class="m-0 text-uppercase"><a class="text-white" href="/home">Home</a></p>
                 <i class="fa fa-angle-double-right pt-1 px-3"></i>
                 <p class="m-0 text-uppercase">Events</p>
             </div>
@@ -31,14 +31,14 @@
                         <div class="col-md-12">
                             <div class="mb-3 mb-md-0">
                                 <div class="date" id="date2" data-target-input="nearest">
-                                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Event name">
+                                    <input id="eventname" type="text" class="form-control p-4 datetimepicker-input" placeholder="Event name">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-2">
-                    <button class="btn btn-info btn-block" type="submit" style="height: 47px; margin-top: -2px;">Search</button>
+                    <button id="btngetlist" class="btn btn-info btn-block" type="button" style="height: 47px; margin-top: -2px;">Search</button>
                 </div>
             </div>
         </div>
@@ -62,16 +62,6 @@
                                     </div>
                                 </div>
                                 <div class="bg-white p-4">
-                                  @*   <div class="d-flex mb-2">
-                                        @{
-                                            List<string> topicsList = new List<string>(item.EventTopics.Split(","));
-                                        }
-                                        @foreach (var topic in topicsList)
-                                        {
-                                            <span class="text-primary px-2">|</span>
-                                            <a class="text-primary text-uppercase text-decoration-none" href="/Home/HomeMysteriousEventsByTopic?topic=@topic">@topic</a>
-                                        }
-                                    </div> *@
                                     <a class="h5 m-0 text-decoration-none" href="/eventdetails/@item.EventID">@item.EventTitle</a>
                                 </div>
                             </div>
