--- a/MysteriousEncyclopedia/Views/MysteriousEvent/MysteriousEventUpdate.cshtml
+++ b/MysteriousEncyclopedia/Views/MysteriousEvent/MysteriousEventUpdate.cshtml
@@ -54,8 +54,8 @@
                         </label>
                     </div>
                     <button type="submit" class="btn btn-info btn-rounded me-2 mt-2">Update</button>
-                    <a href="/MysteriousEvent/ResourcesByEventID/@Model.EventID" class="btn btn-danger btn-rounded mt-2">Resources</a>
-                    <a href="/MysteriousEvent/MysteriousEventList/" class="btn btn-dark btn-rounded mt-2">Cancel</a>
+                    <a href="/eventsources/@Model.EventID" class="btn btn-danger btn-rounded mt-2">Resources</a>
+                    <a href="/showmysteriousevents" class="btn btn-dark btn-rounded mt-2">Cancel</a>
                 </form>
             </div>
         </div>
