--- a/MysteriousEncyclopedia/Views/Reference/ReferencesList.cshtml
+++ b/MysteriousEncyclopedia/Views/Reference/ReferencesList.cshtml
@@ -35,7 +35,7 @@
                                     <td>@item.ReferenceID</td>
                                     <td>@item.ReferenceTitle</td>
                                     <td><a href="@item.ReferenceUrl" target="_blank" class="btn btn-outline-info btn-rounded btn-fw">Url</a></td>
-                                    <td><a href="/Reference/UpdateReference/@item.ReferenceID" class="btn btn-outline-info btn-rounded btn-fw">Edit</a></td>
+                                    <td><a href="/editref/@item.ReferenceID" class="btn btn-outline-info btn-rounded btn-fw">Edit</a></td>
                                 </tr>
                             }
                         </tbody>
@@ -47,7 +47,7 @@
                    LiElementClasses = new List<string> { "btn", "btn-primary" }
                })
                     <br />
-                    <a href="/Reference/AddReference/" class="btn btn-outline-primary btn-rounded btn-fw">Add New Reference</a>
+                    <a href="/newreference/" class="btn btn-outline-primary btn-rounded btn-fw">Add New Reference</a>
                 </div>
             </div>
         </div>
